[gd_scene load_steps=5 format=3 uid="uid://6mp1uhlvagte"]

[ext_resource type="Texture2D" uid="uid://bxfbmao3m8jiw" path="res://audiovisual/nodata.png" id="2_gjx1i"]
[ext_resource type="Script" path="res://scenes/game_gallery_element_big.gd" id="2_s8udx"]
[ext_resource type="Texture2D" uid="uid://cvkl75wovecqc" path="res://audiovisual/installed.png" id="3_ghsre"]
[ext_resource type="Texture2D" uid="uid://dxx5srn44vu6q" path="res://audiovisual/star-small.png" id="4_uh0m4"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(900, 56)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 52.0
grow_horizontal = 2
pivot_offset = Vector2(512, 26)
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("2_s8udx")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_right = -12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(507, 26)
theme_override_constants/separation = 12
alignment = 1

[node name="TextureCover" type="TextureRect" parent="Container"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(46, 46)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_gjx1i")
expand_mode = 3
stretch_mode = 5

[node name="LabelTitle" type="Label" parent="Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
vertical_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="TextureInstalled" type="TextureRect" parent="Container"]
unique_name_in_owner = true
self_modulate = Color(0.192157, 0.745098, 0.223529, 0.690196)
texture_filter = 1
layout_mode = 2
tooltip_text = "One or more versions of this mod are installed."
mouse_filter = 0
texture = ExtResource("3_ghsre")
stretch_mode = 5

[node name="TextureFavourite" type="TextureRect" parent="Container"]
unique_name_in_owner = true
self_modulate = Color(0.878431, 0.776471, 0.0941176, 0.737255)
texture_filter = 1
layout_mode = 2
tooltip_text = "This mod is marked as favourite."
mouse_filter = 0
texture = ExtResource("4_uh0m4")
stretch_mode = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(512, 26)
mouse_filter = 1
mouse_default_cursor_shape = 2
flat = true
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
